# demucs-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  bundler.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
bench/: .gitignore  compare.py  debug_transformer.py  diagnose.py  dump_checkpoints.py  kernel_compare.py  main.py  pyproject.toml  sdr.py  separate.py
demucs-cli/: Cargo.toml
demucs-cli/src/: audio.rs  download.rs  main.rs  progress.rs
demucs-core/: Cargo.toml
demucs-core/src/: error.rs  lib.rs  listener.rs  stft.rs
demucs-core/src/dsp/: cac.rs  mod.rs  resample.rs  spectrogram.rs  stft.rs
demucs-core/src/model/: conv.rs  htdemucs.rs  metadata.rs  mod.rs  transformer.rs
demucs-core/src/provider/: fs.rs  mod.rs
demucs-core/src/weights/: load.rs  mod.rs  tensor_store.rs
demucs-core/tests/: dsp_roundtrip.rs  stem_sum.rs
demucs-plugin/: Cargo.toml  build.rs
demucs-plugin/src/: audio.rs  cache.rs  clip.rs  inference.rs  lib.rs  params.rs  plugin_listener.rs  shared_state.rs  state.rs
demucs-plugin/src/editor/: mod.rs  protocol.rs  swiftui_editor.rs
demucs-plugin/ui-macos/: Package.swift
demucs-plugin/ui-macos/Sources/CDemucsTypes/include/: FFITypes.h
demucs-plugin/ui-macos/Sources/DemucsUI/: DemucsEditorView.swift  ErrorView.swift  FFIBridge.swift  IdleView.swift  PillButton.swift  ReadyView.swift  SpectrogramRenderer.swift  Theme.swift  ViewState.swift  WaveformView.swift
demucs-plugin/ui-mockup/: index.html
demucs-wasm/: Cargo.toml
demucs-wasm/src/: lib.rs
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
web/e2e/: playwright.config.ts
web/e2e/fixtures/: .gitignore  app.ts
web/e2e/helpers/: validation.ts
web/e2e/tests/: clip-selection.spec.ts  full-separation.spec.ts  load-spectrogram.spec.ts  model-download.spec.ts
web/src/: App.css  App.tsx  worker.ts
web/src/components/: DropZone.tsx  LoadingState.tsx  ModelProgress.tsx  ModelSidebar.tsx  PlayerControls.tsx  ProgressBar.tsx  SpectrogramView.tsx  StemResults.tsx  WarmupScreen.tsx
web/src/design/: tokens.ts
web/src/dsp/: colormap.ts  format.ts  wav.ts
web/src/hooks/: useAudioPlayer.ts  useDemucsWorker.ts  useMultiTrackPlayer.ts
web/src/models/: modelCache.ts  registry.ts  useModelDownload.ts
