[package]
name = "demucs-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demucs"
path = "src/main.rs"

[features]
default = []
macos   = ["demucs-core/wgpu", "demucs-core/autotune", "burn/wgpu", "burn/autotune", "burn/metal"]
linux   = ["demucs-core/wgpu", "demucs-core/autotune", "burn/wgpu", "burn/autotune", "burn/vulkan"]
windows = ["demucs-core/wgpu", "demucs-core/autotune", "burn/wgpu", "burn/autotune", "burn/vulkan"]
cpu     = ["demucs-core/ndarray", "burn/ndarray"]

[dependencies]
demucs-core = { path = "../demucs-core" }
burn = { version = "0.20.1" }
cubecl = { version = "0.9", default-features = false }
clap = { version = "4", features = ["derive"] }
hound = "3"
ureq = "2"
indicatif = "0.17"
anyhow = "1"
pollster = "0.4"
