[package]
name = "demucs-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demucs"
path = "src/main.rs"

[features]
default = []
cpu     = ["demucs-core/ndarray", "burn/ndarray"]

[dependencies]
demucs-core = { path = "../demucs-core", features = ["wgpu", "autotune", "fusion"] }
burn = { version = "0.20.1", features = ["wgpu", "autotune", "fusion"] }
cubecl = { version = "0.9", default-features = false }
clap = { version = "4", features = ["derive"] }
hound = "3"
ureq = { version = "2", default-features = false, features = ["native-tls", "gzip"] }
indicatif = "0.17"
anyhow = "1"
pollster = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
burn = { version = "0.20.1", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
burn = { version = "0.20.1", features = ["vulkan"] }
