[package]
name = "demucs-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }

# Core inference
demucs-core = { path = "../demucs-core", features = ["wgpu", "autotune", "fusion"] }
burn = { version = "0.20.1", features = ["wgpu", "autotune", "fusion"] }
cubecl = { version = "0.9", default-features = false }

# Audio I/O
hound = "3"

# Stem caching
blake3 = "1"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Threading & shared state
crossbeam-channel = "0.5"
arc-swap = "1"
parking_lot = "0.12"

# Async runtime (for pollster::block_on in inference thread)
pollster = "0.4"

# Model download
ureq = { version = "2", default-features = false, features = ["native-tls", "gzip"] }

# Logging
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
burn = { version = "0.20.1", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
burn = { version = "0.20.1", features = ["vulkan"] }
