[package]
name = "demucs-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
demucs-core = { path = "../demucs-core", features = ["ndarray"] }
burn = { version = "0.20.1", features = ["ndarray"] }
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
